--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Impact, sans-serif;
+  font-family: Courier, sans-serif;
   display: flex;
   flex-direction: column;
 }
@@ -7,12 +7,10 @@ body {
 h1 {
   font-size: 3em;
 }
-h2 {
-  padding:20px;
-}
+
 
 h3 {
-  line-height: 25px;
+  /*line-height: 25px;*/
   padding-bottom: 10px;
 }
 
@@ -25,7 +23,7 @@ header {
 }
 
 article {
-  font-size: 37px;
+  font-size: 32px;
   color: red;
 }
 
@@ -66,12 +64,11 @@ line-height: 45px;
 }
 
 
-
 input {
   width: 550px;
   height: 70px;
-  font-family: Impact, sans-serif;
-  font-size: 44px;
+  font-family: Arial Black, serif;
+  font-size: 32px;
 margin: 0 auto;
 }
 
@@ -101,12 +98,21 @@ justify-content:flex-end;
   outline: solid black 2px;
 }
 
-nav div {
+.guesses {
   height: 100px;
   width: 200px;
   background-color: lemonchiffon;
   text-align: center;
 }
+
+nav div {
+  height: 60px;
+  width: 200px;
+  background-color: lemonchiffon;
+  text-align: center;
+}
+
+
 
 #main {
   display: flex;
